Updated to 1.0, renamed to QuickC, optimized BinaryVar, Dictionary formatting, added support to few types, removing pointer subsystem, added type bindings

--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\wbinary\wbinary.csproj" />
+    <ProjectReference Include="..\wbinary\QuickC.csproj" />
   </ItemGroup>
 
 </Project>
